# connector-cookiecutter

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.connector_slug }}/: .env  .env.example  README.md  pyproject.toml
{{ cookiecutter.connector_slug }}/src/: config.yml  config.yml.sample  main.py
{{ cookiecutter.connector_slug }}/src/{{ cookiecutter.connector_slug }}/: __init__.py  settings.py
